<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2011  Nguyen Hoang Ton, a.k.a Ton Nguyen
 
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 2
  of the License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with this program; if not, write to the Free Software
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->

<resources>
    <string name="loading_Data">Đang nạp dữ liệu...</string>
    <string name="app_name">Lý thuyết lái xe</string>
    <string name="ok_button">Đồng ý</string>
    <string name="cancel_button">Bỏ qua</string>
    <string name="see_you_again">Chúc bạn thi tốt và lái xe an toàn!</string>
    
    <string name="download_Resource_Title">Tải dữ liệu</string>
    <string name="download_Resource_Message">Chương trình cần tải dữ liệu câu hỏi từ Internet(~7MB), sẽ mất phí nếu sử dụng 3G. Khuyến cáo nên sử dụng Wifi.</string>
    <string name="download_Resource_Button_Yes">Đồng ý tải dữ liệu</string>
    <string name="download_Resource_Button_No">Thoát</string>
    <string name="download_Resource_Message_Downloading">Đang tải dữ liệu...</string>
    <string name="download_Resource_Message_Extracting">Đang giải nén...</string>
    <string name="download_Resource_Error_Occurred">Có lỗi trong quá trình tải dữ liệu, xin vui lòng thử lại. Lỗi: </string>
    <string name="download_Resource_Message_Downloaded">Đã tải xong dữ liệu</string>
    <string name="download_Resource_Message_Extracted">Đã giải nén xong</string>
    <string name="download_Resource_Message_Loaded">Đã nạp xong dữ liệu</string>
    
    <string name="home_SelectlLevel_Title">Chọn một hạng để thi</string>
    
    <string name="menu_new_exam">Làm bài thi</string>
    <string name="menu_config">Thiết lập</string>
    <string name="menu_help">Hướng dẫn</string>
    <string name="menu_exit">Thoát</string>
    <string name="menu_mostincorrect">Câu hay làm sai</string>
    
    <string name="error_pleaseSelect_Level">Xin vui lòng chọn một hạng</string>
    <string name="error_data_corrupted">Dữ liệu lỗi</string>
    <string name="error_question_review_session_not_found">Không tìm thấy dữ liệu kết quả.</string>
    
    <string name="exam_firsttime_help_message">Để hiểu về các chức năng, cách sử dụng chương trình, bạn nhấn phím Menu và chọn "Hướng dẫn".</string>
    <string name="exam_firsttime_howtoexit_message">Để nộp bài, bạn nhấn phím Menu và chọn "Kết thúc".</string>
    <string name="exam_exit_confirm_title">Bạn muốn hoàn tất bài thi?</string>
    <string name="exam_exit_confirm_message">Chọn "Đồng ý" để hoàn tất bài thi, hoặc chọn "Tiếp tục làm bài" để quay lại bài thi</string>
    <string name="exam_exit_confirm_ok">Đồng ý</string>
    <string name="exam_exit_confirm_cancel">Tiếp tục làm bài</string>
    <string name="exam_exit_timeIsUpDialog_title">Hết thời gian</string>
    <string name="exam_exit_timeIsUpDialog_message">Đã hết thời gian làm bài!</string>
    <string name="exam_exit_timeIsUpDialog_viewResult_button">Xem kết quả</string>
    
    <string name="result_title">Kết quả:</string>
    <string name="result_h1">Bạn đã trả lời đúng {0} trên {1} câu.</string>
    <string name="result_h2">Số câu tối thiểu cần trả lời đùng là {0}.</string>
    <string name="result_h4">Thời gian làm bài: {0}.</string>
    <string name="result_h3">Kết quả: {0}</string>
    <string name="result_view_questions_review">Xem đáp án</string>
    <string name="result_exit">Đóng</string>
    
    <string name="result_failed1">Bạn đã thi trượt, bạn cần có gắng hơn. Chúc bạn may mắn lần sau!</string>
    
    <string name="result_passed1">Chúc mừng bạn đã thi đỗ!</string>
    
    <string name="questionreview_exit_confirm_title">Bạn muốn đóng kết quả?</string>
    <string name="questionreview_exit_confirm_message">Chọn "Đồng ý" để đóng kết quả thi và quay lại màn hình chính, hoặc chọn "Không" để tiếp tục xem kết quả.</string>
    <string name="questionreview_exit_confirm_ok">Đồng ý</string>
    <string name="questionreview_exit_confirm_cancel">Không</string>
    
    <string name="exam_menu_end_exam">Kết thúc</string>
    
    <string name="preference_vibrateSetting_title">Rung khi nhấn nút</string>
    <string name="preference_vibrateSetting_summary">Máy sẽ rung mỗi khi nhấn nút</string>
    
    <string name="mostincorrect_empty_dialog_title">Chưa có dữ liệu</string>
    <string name="mostincorrect_empty_dialog_message">Hừm, có vẻ như bạn chưa làm bài thi nào cả. Thử làm bài đi rồi mình sẽ hiện các câu bạn hay làm sai nhé!</string>
    <string name="mostincorrect_empty_dialog_ok">Đồng ý</string>
    
    <string name="exam_help_1">1: Số thứ tự câu hỏi hiện tại.</string>
    <string name="exam_help_2">2: Trạng thái các câu hỏi. Màu đỏ là các câu chưa trả lời, màu vàng là các câu đã trả lời. Nhấn vào phần này, chức năng di chuyển nhanh giữa các câu hỏi sẽ hiện ra. (Xem chi tiết bên dưới)</string>
    <string name="exam_help_3">3: Thời gian còn lại để làm bài thi. Chương trình sẽ tự động kết thúc bài thi khi hết thời gian làm bài.</string>
    <string name="exam_help_4">4: Các phương án trả lời. Bạn nhấn vào một phương án để trả lời cho câu hỏi tương ứng.</string>
    <string name="exam_help_5">5: Các phím di chuyển. Mũi tên sang phải để sang câu tiếp theo, mũi tên sang trái để quay lại câu trước.</string>
    <string name="exam_help_6">Chức năng di chuyển nhanh giữa các câu hỏi cho phép bạn di chuyển tới các câu hỏi bạn muốn, thay vì phải sử dụng các phím di chuyển. Nhấn vào số thứ tự mỗi câu để tới câu đó. Các câu chưa được trả lời sẽ được in đậm.</string>
    <string name="exam_help_7">Để kết thúc bài thi, bạn nhấn phím Menu và chọn Kết thúc.</string>
</resources>
