<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2011  Nguyen Hoang Ton, a.k.a Ton Nguyen
 
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 2
  of the License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with this program; if not, write to the Free Software
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res/com.tonnguyen.sathach"
    android:orientation="vertical"
    android:background="@drawable/startup_grid_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
	        android:id="@+id/adViewContainer"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center">
       	<com.google.ads.AdView android:id="@+id/adViewComponent"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		ads:adUnitId="a14dc8aa6b933d0"
		ads:adSize="BANNER" />
    </LinearLayout>
			
	<LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >
		<TextView 
	        style="@style/HelpScreenText"
	        android:text="@string/result_title"
	        android:gravity="center_horizontal"
	        android:textStyle="bold"
	        android:textColor="@color/startup_btn_text"
	        />
        <TextView android:id="@+id/result_h1"
	        style="@style/HelpScreenText"
	        android:text="@string/result_h1"
	        android:textColor="@color/startup_btn_text"
	        />
		<TextView android:id="@+id/result_h2"
	        style="@style/HelpScreenText"
	        android:text="@string/result_h2"
	        android:textColor="@color/startup_btn_text"
	        />
		<TextView android:id="@+id/result_h4"
	        style="@style/HelpScreenText"
	        android:text="@string/result_h4"
	        android:textColor="@color/startup_btn_text"
	        />
		<TextView android:id="@+id/result_h3"
	        style="@style/HelpScreenText"
	        android:text="@string/result_h3"
	        android:textColor="@color/startup_btn_text"
	        />
		<TextView 
	        style="@style/HelpScreenText"
	        android:text="@string/see_you_again"
	        android:textColor="@color/startup_btn_text"
	        />
	</LinearLayout>
	
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
		<Button android:id="@+id/result_show_review_screen"
			android:text="@string/result_view_questions_review"
			android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
		<Button android:id="@+id/result_exit"
			android:text="@string/result_exit"
			android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
	</LinearLayout>
</LinearLayout>
