<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2011  Nguyen Hoang Ton, a.k.a Ton Nguyen
 
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 2
  of the License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with this program; if not, write to the Free Software
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/exam_screen_preference" 
			android:title="@string/menu_config" 
			android:icon="@android:drawable/ic_menu_preferences" />
	<item android:id="@+id/exam_screen_help" 
			android:title="@string/menu_help" 
			android:icon="@android:drawable/ic_menu_help" />
    <item android:id="@+id/exam_screen_end_exam" 
    		android:title="@string/exam_menu_end_exam" 
    		android:icon="@android:drawable/ic_menu_save" />
</menu>