<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res/vn.tonnguyen.sathach"
    android:id="@+id/home_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<!-- Action bar -->
	<LinearLayout android:id="@+id/startup_titleBarContainer"
					style="@style/TitleBarContainer">
		<ImageView style="@style/TitleBarLogo" />
	</LinearLayout>
    
    <!-- Grid -->
	<LinearLayout
		android:id="@+id/startup_gridContainer"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/startup_grid_background"
        android:padding="5dip">
        <!-- First row -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/startup_btn_startexam" 
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:textColor="@color/startup_btn_text"
                android:background="@null"
                android:text="@string/menu_new_exam"
                android:drawableTop="@drawable/startup_btn_startexam"/>
			<Button android:id="@+id/startup_btn_config" 
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:textColor="@color/startup_btn_text"
                android:background="@null"
                android:text="@string/menu_config"
                android:drawableTop="@drawable/startup_btn_preferences"/>
        </LinearLayout>
        
        <!-- Second row -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button android:id="@+id/startup_btn_exit"
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:textColor="@color/startup_btn_text"
                android:background="@null"
                android:text="@string/menu_exit"
                android:drawableTop="@drawable/startup_btn_exit"/>
			<Button 
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:textColor="@color/startup_btn_text"
                android:background="@null"
                android:text="" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
	        android:id="@+id/adViewContainer"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center">
        <com.google.ads.AdView android:id="@+id/adViewComponent"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			ads:adUnitId="a14dc8aa6b933d0"
			ads:adSize="BANNER" />
    </LinearLayout>
    
</LinearLayout>
